# Rust-Password-Manager

./: .gitguardian.yaml  .gitignore  index.html  package-lock.json  package.json  sign_android.bat  vite.config.ts
src/: index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: database.sql
src-tauri/src/: crypto.rs  db.rs  lib.rs  state.rs  utils.rs
src/static/css/: styles.css
src/static/ts/: main.ts  utils.ts
